import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

const validMediaFeatureValues = [
	['any-hover', 'hover'],
	['any-pointer', 'fine'],
	['aspect-ratio', '16 / 9'],
	['color', '8'],
	['color-gamut', 'p3'],
	['color-index', '256'],
	['device-aspect-ratio', '16 / 9'],
	['device-height', '1080px'],
	['device-posture', 'folded'],
	['device-width', '1920px'],
	['display-state', 'maximized'],
	['display-mode', 'standalone'],
	['display-mode', 'window-controls-overlay'],
	['dynamic-range', 'high'],
	['environment-blending', 'additive'],
	['forced-colors', 'active'],
	['grid', '1'],
	['height', '100dvh'],
	['horizontal-viewport-segments', '2'],
	['hover', 'none'],
	['inverted-colors', 'inverted'],
	['monochrome', '1'],
	['nav-controls', 'back'],
	['orientation', 'landscape'],
	['overflow-block', 'paged'],
	['overflow-inline', 'scroll'],
	['pointer', 'coarse'],
	['prefers-color-scheme', 'dark'],
	['prefers-contrast', 'custom'],
	['prefers-reduced-data', 'reduce'],
	['prefers-reduced-motion', 'reduce'],
	['prefers-reduced-transparency', 'reduce'],
	['resolution', '2dppx'],
	['resizable', 'true'],
	['scan', 'progressive'],
	['scripting', 'enabled'],
	['shape', 'round'],
	['ua-color-scheme', 'dark'],
	['update', 'slow'],
	['vertical-viewport-segments', '2'],
	['video-color-gamut', 'rec2020'],
	['video-dynamic-range', 'standard'],
	['width', '80rem'],
];

test.snapshot({
	valid: [
		...validMediaFeatureValues.map(([name, value]) => `@media (${name}: ${value}) {}`),
		'@media (color) {}',
		'@media (orientation) and (grid) {}',
		...['0', '-0', '+1', '01', 'calc(1)', 'env(grid-display)'].map(value => `@media (grid: ${value}) {}`),
		'@media (min-width: 10px) and (max-width: 20px) {}',
		'@media (width > 10px) {}',
		'@media (10px < width) {}',
		...['<', '<='].flatMap(leftComparison => ['<', '<='].map(rightComparison => `@media (10px ${leftComparison} width ${rightComparison} 20px) {}`)),
		...['>', '>='].flatMap(leftComparison => ['>', '>='].map(rightComparison => `@media (20px ${leftComparison} width ${rightComparison} 10px) {}`)),
		'@media (20px > WIDTH >= 10px) {}',
		String.raw`@media (10px < w\69 dth <= 20px) {}`,
		'@media (infinite > resolution) {}',
		'@media (infinite > resolution >= 1dppx) {}',
		'@media (1 / 2 < aspect-ratio <= 16 / 9) {}',
		'@media (width > calc(10px + 1em)) {}',
		'@media (color: calc(1 + 1)) {}',
		'@media (width: env(viewport-segment-width 0 0)) {}',
		'@media (color: env(color-depth)) {}',
		'@media (aspect-ratio: env(viewport-ratio)) {}',
		'@media (resolution: env(display-resolution)) {}',
		'@media (orientation: env(viewport-orientation)) {}',
		'@media (width > calc(env(viewport-segment-width 0 0) + 1px)) {}',
		'@media (width >= theme(--breakpoint-xl)) {}',
		'@media (theme(--minimum) < width <= theme(--maximum)) {}',
		'@media (env(viewport-segment-width 0 0) <= width < calc(100px + 1em)) {}',
		'@media (width: theme("screens.md")) {}',
		{code: '@media (width: theme(screens.md)) {}', languageOptions: {tolerant: true}},
		'@media (width > calc(theme(--spacing) * 10)) {}',
		'@media (width: unknown-function()) {}',
		'@media (width: 0) {}',
		'@media (width: -1px) {}',
		'@media (color: -1) {}',
		'@media (RESOLUTION: INFINITE) {}',
		String.raw`@media (w\69 dth: 10px) {}`,
		String.raw`@media (orientation: p\6frtrait) {}`,
		String.raw`@media (width > 1p\78) {}`,
		String.raw`@media (resolution > in\66 inite) {}`,
		String.raw`@media (width: c\61 lc(1p\78 + 1em)) {}`,
		String.raw`@media (width: c\61 lc(e\6e v(viewport-segment-width 0 0) + 1p\78)) {}`,
		'@media (--narrow) {}',
		'@media (--narrow: red) {}',
		'@media (-webkit-min-device-pixel-ratio: 2) {}',
		'@media (min--moz-device-pixel-ratio: 2) {}',
		'@media (max--moz-device-pixel-ratio: 2) {}',
		'@media (MIN--MOZ-device-pixel-ratio: 2) {}',
		String.raw`@media (m\69 n--moz-device-pixel-ratio: 2) {}`,
		'@media (min--webkit-device-pixel-ratio > 2) {}',
		'@media (min--moz-unknown-feature: 2) {}',
		'@media (10px < -vendor-feature) {}',
		'@media (10px < --narrow < 20px) {}',
		'@media (10px < 20px < -vendor-feature) {}',
		'@media (min--moz-device-pixel-ratio) {}',
		'@media (MIN-WIDTH: 10px) {}',
		String.raw`@media (m\61 x-width: 20px) {}`,
		'@container (unknown-feature: red) {}',
		'@container (orientation > portrait) {}',
		'@media (/* before */ width /* name */: /* value */ 10px) {}',
		'.element { @media (width: 10px) { color: red; } }',
		// Valid values and notation not covered above
		'@media (min-height: 100px) {}',
		'@media (max-aspect-ratio: 16 / 9) {}',
		'@media (min-resolution: 2dppx) and (max-resolution: 300dpi) {}',
		'@media (resolution: 1x) {}',
		'@media (device-width >= 1024px) {}',
		'@media (min-device-aspect-ratio: 1 / 1) {}',
		'@media (min-device-width: 10px) {}',
		'@media (shape: rect) {}',
		// At-rule name, feature name, unit, and keyword are ASCII case-insensitive
		'@MEDIA (WIDTH: 10PX) {}',
		'@media (HOVER: NONE) {}',
		// Math functions and env() are checked on a best-effort basis
		'@media (width: min(10px, 2em)) {}',
		'@media (width: clamp(1px, 2vw, 3px)) {}',
		'@media (width: round(up, 10px, 1px)) {}',
		'@media (aspect-ratio: calc(16 / 9)) {}',
		'@media (width: calc(2s)) {}',
		'@media (width: env(safe-area-inset-left, 10px)) {}',
		'@media (resolution: fo(2dppx)) {}',
		// Media query lists, modifiers, and nesting
		'@media screen and (width: 10px) {}',
		'@media only screen and (min-width: 10px) {}',
		'@media not all and (min-width: 10px) {}',
		'@media (min-width: 10px) and (max-width: 20px) and (orientation: landscape) {}',
		'@import "theme.css" screen and (min-width: 10px);',
		'@supports (display: grid) { .element { @media (width: 10px) { color: red; } } }',
		'@media screen { .element { @media (width: 10px) { color: red; } } }',
		'@media (--x) and (width: 10px) {}',
		// Vendor-prefixed features are ignored, even without a value
		'@media (-webkit-device-pixel-ratio: 2.5) {}',
		'@media (-ms-high-contrast: active) {}',
		'@media (-webkit-min-device-pixel-ratio) {}',
	],
	invalid: [
		'@media (unknown-feature) {}',
		'@media (unknown-feature: 10px) {}',
		'@media (/* before */ unknown-feature /* name */: 10px) {}',
		'@media (/* unknown-feature */ unknown-feature: 10px) {}',
		'@media (unknown-feature > 10px) {}',
		'@media (10px < unknown-feature) {}',
		'@media (light-level: normal) {}',
		'@media (width: red) {}',
		'@media (width: 10pixels) {}',
		'@media (width: var(--breakpoint)) {}',
		'@media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {}',
		'@media (color: 1.5) {}',
		'@media (width: rgb(0 0 0)) {}',
		'@media (min-device-pixel-ratio: 2) {}',
		'@media (min-widht: 10px) {}',
		'@media (aspect-ratio: 10px) {}',
		'@media (resolution: 10px) {}',
		'@media (grid: 2) {}',
		'@media (orientation: square) {}',
		'@media (display-mode: windowed) {}',
		'@media (device-posture: flat) {}',
		'@media (shape: square) {}',
		'@media (red < width < blue) {}',
		// U+3000 is not CSS whitespace, so it is part of the feature name.
		'@media (\u3000\u3000unknown-feature) {}',
		'@media (min-width) {}',
		'@media (max-height) {}',
		'@media (MIN-WIDTH) {}',
		String.raw`@media (m\61 x-width) {}`,
		'@media (/* before */ min-width /* name */) {}',
		'@media (orientation > portrait) {}',
		'@media (portrait < orientation) {}',
		'@media (grid >= 0) {}',
		'@media (ORIENTATION > portrait) {}',
		String.raw`@media (o\72 ientation > portrait) {}`,
		'@media (orientation > square) {}',
		'@media (orientation > theme(--orientation)) {}',
		'@media (min-width > 10px) {}',
		'@media (10px < max-width) {}',
		'@media (MAX-WIDTH > 10px) {}',
		String.raw`@media (m\69 n-width > 10px) {}`,
		'@media (min-width > red) {}',
		'@media (10px < min-width < 20px) {}',
		'@media (10px < width > 20px) {}',
		'@media (20px >= width <= 10px) {}',
		'@media (width < 10px < 20px) {}',
		'@media (10px < 20px < width) {}',
		'@media (/* before */ 10px /* left */ < width /* middle */ > 20px) {}',
		'@media (theme(--minimum) < width > theme(--maximum)) {}',
		'@media (min-grid: 1) {}',
		'@supports (display: grid) { .element { @media (max-width) { color: red; } } }',
		'@import "theme.css" (orientation > portrait);',
		'@media (10px < 20px < unknown-feature) {}',
		'@media (10px < 20px < orientation) {}',
		String.raw`@media (10px < 20px < m\61 x-width) {}`,
		String.raw`@media (width: 1\31 px) {}`,
		String.raw`@media (width: 1\65 2px) {}`,
		'@media (grid: -1) {}',
		'@media (grid: 1.0) {}',
		'@media (theme(--minimum) < width < red) {}',
		// Unknown feature names
		'@media (widht: 10px) {}',
		'@media (heigth) {}',
		'@media not all and (unknown-feature: 1px) {}',
		'@media (width: 10px) and (unknown-feature: 2px) {}',
		// Invalid values for known features
		'@media (color-index: 1.5) {}',
		'@media (color: rgb(0, 0, 0)) {}',
		'@media (scan: interlaced) {}',
		'@media (update: quick) {}',
		'@media (overflow-block: auto) {}',
		'@media (pointer: touch) {}',
		'@media (hover: yes) {}',
		'@media (prefers-color-scheme: dark-mode) {}',
		'@media (prefers-reduced-motion: 0) {}',
		'@media (scripting: yes) {}',
		'@media (color-gamut: rgb) {}',
		'@media (nav-controls: forward) {}',
		'@media (display-state: open) {}',
		'@media (horizontal-viewport-segments: 0.5) {}',
		// Range notation is not allowed for discrete features
		'@media (color-gamut > srgb) {}',
		'@media (scan > progressive) {}',
		'@media (update >= slow) {}',
		'@media (pointer <= fine) {}',
		// Features prefixed with min- or max- require plain notation with a value
		'@media (max-height <= 20px) {}',
		'@media (10px < min-device-width) {}',
		'@media (min-resolution) {}',
		// Chained comparisons
		'@media (10px <= width > 20px) {}',
		'@media (10px > width < 20px) {}',
		'@media (20px > width > red) {}',
		'@media (10px < width < 20px) and (20px < height > 10px) {}',
		// Nested and imported media queries
		'@media screen { .element { @media (min-width) { color: red; } } }',
		'@import "theme.css" (width: red);',
	],
});

test({
	valid: [],
	invalid: [
		'@media (overflow-blocK: scroll) {}',
		'@media (overflow-blocK > scroll) {}',
		String.raw`@media (overflow-bloc\212a: scroll) {}`,
	].map(code => ({code, errors: [{messageId: 'no-invalid-media-features/unknown'}]})),
});
