exports[`invalid(1): @media (unknown-feature) {} 1`] = `

  1 | @media (unknown-feature) {}

`;

exports[`invalid(1): @media (unknown-feature) {} 2`] = `

Message:
> 1 | @media (unknown-feature) {}
    |         ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(10): @media (width: var(--breakpoint)) {} 1`] = `

  1 | @media (width: var(--breakpoint)) {}

`;

exports[`invalid(10): @media (width: var(--breakpoint)) {} 2`] = `

Message:
> 1 | @media (width: var(--breakpoint)) {}
    |                ^^^^^^^^^^^^^^^^^ Invalid value \`var(--breakpoint)\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(11): @media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {} 1`] = `

  1 | @media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {}

`;

exports[`invalid(11): @media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {} 2`] = `

Message:
> 1 | @media (width: calc(var(--breakpoint) + env(safe-area-inset-left))) {}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid value \`calc(var(--breakpoint) + env(safe-area-inset-left))\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(12): @media (color: 1.5) {} 1`] = `

  1 | @media (color: 1.5) {}

`;

exports[`invalid(12): @media (color: 1.5) {} 2`] = `

Message:
> 1 | @media (color: 1.5) {}
    |                ^^^ Invalid value \`1.5\` for media feature \`color\`. Expected <integer>.

`;

exports[`invalid(13): @media (width: rgb(0 0 0)) {} 1`] = `

  1 | @media (width: rgb(0 0 0)) {}

`;

exports[`invalid(13): @media (width: rgb(0 0 0)) {} 2`] = `

Message:
> 1 | @media (width: rgb(0 0 0)) {}
    |                ^^^^^^^^^^ Invalid value \`rgb(0 0 0)\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(14): @media (min-device-pixel-ratio: 2) {} 1`] = `

  1 | @media (min-device-pixel-ratio: 2) {}

`;

exports[`invalid(14): @media (min-device-pixel-ratio: 2) {} 2`] = `

Message:
> 1 | @media (min-device-pixel-ratio: 2) {}
    |         ^^^^^^^^^^^^^^^^^^^^^^ Unknown media feature \`min-device-pixel-ratio\`.

`;

exports[`invalid(15): @media (min-widht: 10px) {} 1`] = `

  1 | @media (min-widht: 10px) {}

`;

exports[`invalid(15): @media (min-widht: 10px) {} 2`] = `

Message:
> 1 | @media (min-widht: 10px) {}
    |         ^^^^^^^^^ Unknown media feature \`min-widht\`.

`;

exports[`invalid(16): @media (aspect-ratio: 10px) {} 1`] = `

  1 | @media (aspect-ratio: 10px) {}

`;

exports[`invalid(16): @media (aspect-ratio: 10px) {} 2`] = `

Message:
> 1 | @media (aspect-ratio: 10px) {}
    |                       ^^^^ Invalid value \`10px\` for media feature \`aspect-ratio\`. Expected <ratio>.

`;

exports[`invalid(17): @media (resolution: 10px) {} 1`] = `

  1 | @media (resolution: 10px) {}

`;

exports[`invalid(17): @media (resolution: 10px) {} 2`] = `

Message:
> 1 | @media (resolution: 10px) {}
    |                     ^^^^ Invalid value \`10px\` for media feature \`resolution\`. Expected <resolution> | infinite.

`;

exports[`invalid(18): @media (grid: 2) {} 1`] = `

  1 | @media (grid: 2) {}

`;

exports[`invalid(18): @media (grid: 2) {} 2`] = `

Message:
> 1 | @media (grid: 2) {}
    |               ^ Invalid value \`2\` for media feature \`grid\`. Expected <integer [0,1]>.

`;

exports[`invalid(19): @media (orientation: square) {} 1`] = `

  1 | @media (orientation: square) {}

`;

exports[`invalid(19): @media (orientation: square) {} 2`] = `

Message:
> 1 | @media (orientation: square) {}
    |                      ^^^^^^ Invalid value \`square\` for media feature \`orientation\`. Expected portrait | landscape.

`;

exports[`invalid(2): @media (unknown-feature: 10px) {} 1`] = `

  1 | @media (unknown-feature: 10px) {}

`;

exports[`invalid(2): @media (unknown-feature: 10px) {} 2`] = `

Message:
> 1 | @media (unknown-feature: 10px) {}
    |         ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(20): @media (display-mode: windowed) {} 1`] = `

  1 | @media (display-mode: windowed) {}

`;

exports[`invalid(20): @media (display-mode: windowed) {} 2`] = `

Message:
> 1 | @media (display-mode: windowed) {}
    |                       ^^^^^^^^ Invalid value \`windowed\` for media feature \`display-mode\`. Expected fullscreen | standalone | minimal-ui | browser | picture-in-picture | window-controls-overlay.

`;

exports[`invalid(21): @media (device-posture: flat) {} 1`] = `

  1 | @media (device-posture: flat) {}

`;

exports[`invalid(21): @media (device-posture: flat) {} 2`] = `

Message:
> 1 | @media (device-posture: flat) {}
    |                         ^^^^ Invalid value \`flat\` for media feature \`device-posture\`. Expected continuous | folded.

`;

exports[`invalid(22): @media (shape: square) {} 1`] = `

  1 | @media (shape: square) {}

`;

exports[`invalid(22): @media (shape: square) {} 2`] = `

Message:
> 1 | @media (shape: square) {}
    |                ^^^^^^ Invalid value \`square\` for media feature \`shape\`. Expected rect | round.

`;

exports[`invalid(23): @media (red < width < blue) {} 1`] = `

  1 | @media (red < width < blue) {}

`;

exports[`invalid(23): @media (red < width < blue) {} 2`] = `

Message:
> 1 | @media (red < width < blue) {}
    |         ^^^ Invalid value \`red\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(23): @media (red < width < blue) {} 3`] = `

Message:
> 1 | @media (red < width < blue) {}
    |                       ^^^^ Invalid value \`blue\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(24): @media (　　unknown-feature) {} 1`] = `

  1 | @media (　　unknown-feature) {}

`;

exports[`invalid(24): @media (　　unknown-feature) {} 2`] = `

Message:
> 1 | @media (　　unknown-feature) {}
    |         ^^^^^^^^^^^^^^^^^ Unknown media feature \`　　unknown-feature\`.

`;

exports[`invalid(25): @media (min-width) {} 1`] = `

  1 | @media (min-width) {}

`;

exports[`invalid(25): @media (min-width) {} 2`] = `

Message:
> 1 | @media (min-width) {}
    |         ^^^^^^^^^ Media feature \`min-width\` requires a value in plain notation.

`;

exports[`invalid(26): @media (max-height) {} 1`] = `

  1 | @media (max-height) {}

`;

exports[`invalid(26): @media (max-height) {} 2`] = `

Message:
> 1 | @media (max-height) {}
    |         ^^^^^^^^^^ Media feature \`max-height\` requires a value in plain notation.

`;

exports[`invalid(27): @media (MIN-WIDTH) {} 1`] = `

  1 | @media (MIN-WIDTH) {}

`;

exports[`invalid(27): @media (MIN-WIDTH) {} 2`] = `

Message:
> 1 | @media (MIN-WIDTH) {}
    |         ^^^^^^^^^ Media feature \`MIN-WIDTH\` requires a value in plain notation.

`;

exports[`invalid(28): @media (m\\61 x-width) {} 1`] = `

  1 | @media (m\\61 x-width) {}

`;

exports[`invalid(28): @media (m\\61 x-width) {} 2`] = `

Message:
> 1 | @media (m\\61 x-width) {}
    |         ^^^^^^^^^^^^ Media feature \`m\\61 x-width\` requires a value in plain notation.

`;

exports[`invalid(29): @media (/* before */ min-width /* name */) {} 1`] = `

  1 | @media (/* before */ min-width /* name */) {}

`;

exports[`invalid(29): @media (/* before */ min-width /* name */) {} 2`] = `

Message:
> 1 | @media (/* before */ min-width /* name */) {}
    |                      ^^^^^^^^^ Media feature \`min-width\` requires a value in plain notation.

`;

exports[`invalid(3): @media (/* before */ unknown-feature /* name */: 10px) {} 1`] = `

  1 | @media (/* before */ unknown-feature /* name */: 10px) {}

`;

exports[`invalid(3): @media (/* before */ unknown-feature /* name */: 10px) {} 2`] = `

Message:
> 1 | @media (/* before */ unknown-feature /* name */: 10px) {}
    |                      ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(30): @media (orientation > portrait) {} 1`] = `

  1 | @media (orientation > portrait) {}

`;

exports[`invalid(30): @media (orientation > portrait) {} 2`] = `

Message:
> 1 | @media (orientation > portrait) {}
    |         ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(31): @media (portrait < orientation) {} 1`] = `

  1 | @media (portrait < orientation) {}

`;

exports[`invalid(31): @media (portrait < orientation) {} 2`] = `

Message:
> 1 | @media (portrait < orientation) {}
    |                    ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(32): @media (grid >= 0) {} 1`] = `

  1 | @media (grid >= 0) {}

`;

exports[`invalid(32): @media (grid >= 0) {} 2`] = `

Message:
> 1 | @media (grid >= 0) {}
    |         ^^^^ Media feature \`grid\` does not support range notation.

`;

exports[`invalid(33): @media (ORIENTATION > portrait) {} 1`] = `

  1 | @media (ORIENTATION > portrait) {}

`;

exports[`invalid(33): @media (ORIENTATION > portrait) {} 2`] = `

Message:
> 1 | @media (ORIENTATION > portrait) {}
    |         ^^^^^^^^^^^ Media feature \`ORIENTATION\` does not support range notation.

`;

exports[`invalid(34): @media (o\\72 ientation > portrait) {} 1`] = `

  1 | @media (o\\72 ientation > portrait) {}

`;

exports[`invalid(34): @media (o\\72 ientation > portrait) {} 2`] = `

Message:
> 1 | @media (o\\72 ientation > portrait) {}
    |         ^^^^^^^^^^^^^^ Media feature \`o\\72 ientation\` does not support range notation.

`;

exports[`invalid(35): @media (orientation > square) {} 1`] = `

  1 | @media (orientation > square) {}

`;

exports[`invalid(35): @media (orientation > square) {} 2`] = `

Message:
> 1 | @media (orientation > square) {}
    |         ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(36): @media (orientation > theme(--orientation)) {} 1`] = `

  1 | @media (orientation > theme(--orientation)) {}

`;

exports[`invalid(36): @media (orientation > theme(--orientation)) {} 2`] = `

Message:
> 1 | @media (orientation > theme(--orientation)) {}
    |         ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(37): @media (min-width > 10px) {} 1`] = `

  1 | @media (min-width > 10px) {}

`;

exports[`invalid(37): @media (min-width > 10px) {} 2`] = `

Message:
> 1 | @media (min-width > 10px) {}
    |         ^^^^^^^^^ Media feature \`min-width\` does not support range notation.

`;

exports[`invalid(38): @media (10px < max-width) {} 1`] = `

  1 | @media (10px < max-width) {}

`;

exports[`invalid(38): @media (10px < max-width) {} 2`] = `

Message:
> 1 | @media (10px < max-width) {}
    |                ^^^^^^^^^ Media feature \`max-width\` does not support range notation.

`;

exports[`invalid(39): @media (MAX-WIDTH > 10px) {} 1`] = `

  1 | @media (MAX-WIDTH > 10px) {}

`;

exports[`invalid(39): @media (MAX-WIDTH > 10px) {} 2`] = `

Message:
> 1 | @media (MAX-WIDTH > 10px) {}
    |         ^^^^^^^^^ Media feature \`MAX-WIDTH\` does not support range notation.

`;

exports[`invalid(4): @media (/* unknown-feature */ unknown-feature: 10px) {} 1`] = `

  1 | @media (/* unknown-feature */ unknown-feature: 10px) {}

`;

exports[`invalid(4): @media (/* unknown-feature */ unknown-feature: 10px) {} 2`] = `

Message:
> 1 | @media (/* unknown-feature */ unknown-feature: 10px) {}
    |                               ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(40): @media (m\\69 n-width > 10px) {} 1`] = `

  1 | @media (m\\69 n-width > 10px) {}

`;

exports[`invalid(40): @media (m\\69 n-width > 10px) {} 2`] = `

Message:
> 1 | @media (m\\69 n-width > 10px) {}
    |         ^^^^^^^^^^^^ Media feature \`m\\69 n-width\` does not support range notation.

`;

exports[`invalid(41): @media (min-width > red) {} 1`] = `

  1 | @media (min-width > red) {}

`;

exports[`invalid(41): @media (min-width > red) {} 2`] = `

Message:
> 1 | @media (min-width > red) {}
    |         ^^^^^^^^^ Media feature \`min-width\` does not support range notation.

`;

exports[`invalid(42): @media (10px < min-width < 20px) {} 1`] = `

  1 | @media (10px < min-width < 20px) {}

`;

exports[`invalid(42): @media (10px < min-width < 20px) {} 2`] = `

Message:
> 1 | @media (10px < min-width < 20px) {}
    |                ^^^^^^^^^ Media feature \`min-width\` does not support range notation.

`;

exports[`invalid(43): @media (10px < width > 20px) {} 1`] = `

  1 | @media (10px < width > 20px) {}

`;

exports[`invalid(43): @media (10px < width > 20px) {} 2`] = `

Message:
> 1 | @media (10px < width > 20px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(44): @media (20px >= width <= 10px) {} 1`] = `

  1 | @media (20px >= width <= 10px) {}

`;

exports[`invalid(44): @media (20px >= width <= 10px) {} 2`] = `

Message:
> 1 | @media (20px >= width <= 10px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(45): @media (width < 10px < 20px) {} 1`] = `

  1 | @media (width < 10px < 20px) {}

`;

exports[`invalid(45): @media (width < 10px < 20px) {} 2`] = `

Message:
> 1 | @media (width < 10px < 20px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(46): @media (10px < 20px < width) {} 1`] = `

  1 | @media (10px < 20px < width) {}

`;

exports[`invalid(46): @media (10px < 20px < width) {} 2`] = `

Message:
> 1 | @media (10px < 20px < width) {}
    |        ^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(47): @media (/* before */ 10px /* left */ < width /* middle */ > 20px) {} 1`] = `

  1 | @media (/* before */ 10px /* left */ < width /* middle */ > 20px) {}

`;

exports[`invalid(47): @media (/* before */ 10px /* left */ < width /* middle */ > 20px) {} 2`] = `

Message:
> 1 | @media (/* before */ 10px /* left */ < width /* middle */ > 20px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(48): @media (theme(--minimum) < width > theme(--maximum)) {} 1`] = `

  1 | @media (theme(--minimum) < width > theme(--maximum)) {}

`;

exports[`invalid(48): @media (theme(--minimum) < width > theme(--maximum)) {} 2`] = `

Message:
> 1 | @media (theme(--minimum) < width > theme(--maximum)) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(49): @media (min-grid: 1) {} 1`] = `

  1 | @media (min-grid: 1) {}

`;

exports[`invalid(49): @media (min-grid: 1) {} 2`] = `

Message:
> 1 | @media (min-grid: 1) {}
    |         ^^^^^^^^ Unknown media feature \`min-grid\`.

`;

exports[`invalid(5): @media (unknown-feature > 10px) {} 1`] = `

  1 | @media (unknown-feature > 10px) {}

`;

exports[`invalid(5): @media (unknown-feature > 10px) {} 2`] = `

Message:
> 1 | @media (unknown-feature > 10px) {}
    |         ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(50): @supports (display: grid) { .element { @media (max-width) { color: red; } } } 1`] = `

  1 | @supports (display: grid) { .element { @media (max-width) { color: red; } } }

`;

exports[`invalid(50): @supports (display: grid) { .element { @media (max-width) { color: red; } } } 2`] = `

Message:
> 1 | @supports (display: grid) { .element { @media (max-width) { color: red; } } }
    |                                                ^^^^^^^^^ Media feature \`max-width\` requires a value in plain notation.

`;

exports[`invalid(51): @import \"theme.css\" (orientation > portrait); 1`] = `

  1 | @import "theme.css" (orientation > portrait);

`;

exports[`invalid(51): @import \"theme.css\" (orientation > portrait); 2`] = `

Message:
> 1 | @import "theme.css" (orientation > portrait);
    |                      ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(52): @media (10px < 20px < unknown-feature) {} 1`] = `

  1 | @media (10px < 20px < unknown-feature) {}

`;

exports[`invalid(52): @media (10px < 20px < unknown-feature) {} 2`] = `

Message:
> 1 | @media (10px < 20px < unknown-feature) {}
    |                       ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(53): @media (10px < 20px < orientation) {} 1`] = `

  1 | @media (10px < 20px < orientation) {}

`;

exports[`invalid(53): @media (10px < 20px < orientation) {} 2`] = `

Message:
> 1 | @media (10px < 20px < orientation) {}
    |                       ^^^^^^^^^^^ Media feature \`orientation\` does not support range notation.

`;

exports[`invalid(54): @media (10px < 20px < m\\61 x-width) {} 1`] = `

  1 | @media (10px < 20px < m\\61 x-width) {}

`;

exports[`invalid(54): @media (10px < 20px < m\\61 x-width) {} 2`] = `

Message:
> 1 | @media (10px < 20px < m\\61 x-width) {}
    |                       ^^^^^^^^^^^^ Media feature \`m\\61 x-width\` does not support range notation.

`;

exports[`invalid(55): @media (width: 1\\31 px) {} 1`] = `

  1 | @media (width: 1\\31 px) {}

`;

exports[`invalid(55): @media (width: 1\\31 px) {} 2`] = `

Message:
> 1 | @media (width: 1\\31 px) {}
    |                ^^^^^^^ Invalid value \`1\\31 px\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(56): @media (width: 1\\65 2px) {} 1`] = `

  1 | @media (width: 1\\65 2px) {}

`;

exports[`invalid(56): @media (width: 1\\65 2px) {} 2`] = `

Message:
> 1 | @media (width: 1\\65 2px) {}
    |                ^^^^^^^^ Invalid value \`1\\65 2px\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(57): @media (grid: -1) {} 1`] = `

  1 | @media (grid: -1) {}

`;

exports[`invalid(57): @media (grid: -1) {} 2`] = `

Message:
> 1 | @media (grid: -1) {}
    |               ^^ Invalid value \`-1\` for media feature \`grid\`. Expected <integer [0,1]>.

`;

exports[`invalid(58): @media (grid: 1.0) {} 1`] = `

  1 | @media (grid: 1.0) {}

`;

exports[`invalid(58): @media (grid: 1.0) {} 2`] = `

Message:
> 1 | @media (grid: 1.0) {}
    |               ^^^ Invalid value \`1.0\` for media feature \`grid\`. Expected <integer [0,1]>.

`;

exports[`invalid(59): @media (theme(--minimum) < width < red) {} 1`] = `

  1 | @media (theme(--minimum) < width < red) {}

`;

exports[`invalid(59): @media (theme(--minimum) < width < red) {} 2`] = `

Message:
> 1 | @media (theme(--minimum) < width < red) {}
    |                                    ^^^ Invalid value \`red\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(6): @media (10px < unknown-feature) {} 1`] = `

  1 | @media (10px < unknown-feature) {}

`;

exports[`invalid(6): @media (10px < unknown-feature) {} 2`] = `

Message:
> 1 | @media (10px < unknown-feature) {}
    |                ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(60): @media (widht: 10px) {} 1`] = `

  1 | @media (widht: 10px) {}

`;

exports[`invalid(60): @media (widht: 10px) {} 2`] = `

Message:
> 1 | @media (widht: 10px) {}
    |         ^^^^^ Unknown media feature \`widht\`.

`;

exports[`invalid(61): @media (heigth) {} 1`] = `

  1 | @media (heigth) {}

`;

exports[`invalid(61): @media (heigth) {} 2`] = `

Message:
> 1 | @media (heigth) {}
    |         ^^^^^^ Unknown media feature \`heigth\`.

`;

exports[`invalid(62): @media not all and (unknown-feature: 1px) {} 1`] = `

  1 | @media not all and (unknown-feature: 1px) {}

`;

exports[`invalid(62): @media not all and (unknown-feature: 1px) {} 2`] = `

Message:
> 1 | @media not all and (unknown-feature: 1px) {}
    |                     ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(63): @media (width: 10px) and (unknown-feature: 2px) {} 1`] = `

  1 | @media (width: 10px) and (unknown-feature: 2px) {}

`;

exports[`invalid(63): @media (width: 10px) and (unknown-feature: 2px) {} 2`] = `

Message:
> 1 | @media (width: 10px) and (unknown-feature: 2px) {}
    |                           ^^^^^^^^^^^^^^^ Unknown media feature \`unknown-feature\`.

`;

exports[`invalid(64): @media (color-index: 1.5) {} 1`] = `

  1 | @media (color-index: 1.5) {}

`;

exports[`invalid(64): @media (color-index: 1.5) {} 2`] = `

Message:
> 1 | @media (color-index: 1.5) {}
    |                      ^^^ Invalid value \`1.5\` for media feature \`color-index\`. Expected <integer>.

`;

exports[`invalid(65): @media (color: rgb(0, 0, 0)) {} 1`] = `

  1 | @media (color: rgb(0, 0, 0)) {}

`;

exports[`invalid(65): @media (color: rgb(0, 0, 0)) {} 2`] = `

Message:
> 1 | @media (color: rgb(0, 0, 0)) {}
    |                ^^^^^^^^^^^^ Invalid value \`rgb(0, 0, 0)\` for media feature \`color\`. Expected <integer>.

`;

exports[`invalid(66): @media (scan: interlaced) {} 1`] = `

  1 | @media (scan: interlaced) {}

`;

exports[`invalid(66): @media (scan: interlaced) {} 2`] = `

Message:
> 1 | @media (scan: interlaced) {}
    |               ^^^^^^^^^^ Invalid value \`interlaced\` for media feature \`scan\`. Expected interlace | progressive.

`;

exports[`invalid(67): @media (update: quick) {} 1`] = `

  1 | @media (update: quick) {}

`;

exports[`invalid(67): @media (update: quick) {} 2`] = `

Message:
> 1 | @media (update: quick) {}
    |                 ^^^^^ Invalid value \`quick\` for media feature \`update\`. Expected none | slow | fast.

`;

exports[`invalid(68): @media (overflow-block: auto) {} 1`] = `

  1 | @media (overflow-block: auto) {}

`;

exports[`invalid(68): @media (overflow-block: auto) {} 2`] = `

Message:
> 1 | @media (overflow-block: auto) {}
    |                         ^^^^ Invalid value \`auto\` for media feature \`overflow-block\`. Expected none | scroll | paged.

`;

exports[`invalid(69): @media (pointer: touch) {} 1`] = `

  1 | @media (pointer: touch) {}

`;

exports[`invalid(69): @media (pointer: touch) {} 2`] = `

Message:
> 1 | @media (pointer: touch) {}
    |                  ^^^^^ Invalid value \`touch\` for media feature \`pointer\`. Expected none | coarse | fine.

`;

exports[`invalid(7): @media (light-level: normal) {} 1`] = `

  1 | @media (light-level: normal) {}

`;

exports[`invalid(7): @media (light-level: normal) {} 2`] = `

Message:
> 1 | @media (light-level: normal) {}
    |         ^^^^^^^^^^^ Unknown media feature \`light-level\`.

`;

exports[`invalid(70): @media (hover: yes) {} 1`] = `

  1 | @media (hover: yes) {}

`;

exports[`invalid(70): @media (hover: yes) {} 2`] = `

Message:
> 1 | @media (hover: yes) {}
    |                ^^^ Invalid value \`yes\` for media feature \`hover\`. Expected none | hover.

`;

exports[`invalid(71): @media (prefers-color-scheme: dark-mode) {} 1`] = `

  1 | @media (prefers-color-scheme: dark-mode) {}

`;

exports[`invalid(71): @media (prefers-color-scheme: dark-mode) {} 2`] = `

Message:
> 1 | @media (prefers-color-scheme: dark-mode) {}
    |                               ^^^^^^^^^ Invalid value \`dark-mode\` for media feature \`prefers-color-scheme\`. Expected light | dark.

`;

exports[`invalid(72): @media (prefers-reduced-motion: 0) {} 1`] = `

  1 | @media (prefers-reduced-motion: 0) {}

`;

exports[`invalid(72): @media (prefers-reduced-motion: 0) {} 2`] = `

Message:
> 1 | @media (prefers-reduced-motion: 0) {}
    |                                 ^ Invalid value \`0\` for media feature \`prefers-reduced-motion\`. Expected no-preference | reduce.

`;

exports[`invalid(73): @media (scripting: yes) {} 1`] = `

  1 | @media (scripting: yes) {}

`;

exports[`invalid(73): @media (scripting: yes) {} 2`] = `

Message:
> 1 | @media (scripting: yes) {}
    |                    ^^^ Invalid value \`yes\` for media feature \`scripting\`. Expected none | initial-only | enabled.

`;

exports[`invalid(74): @media (color-gamut: rgb) {} 1`] = `

  1 | @media (color-gamut: rgb) {}

`;

exports[`invalid(74): @media (color-gamut: rgb) {} 2`] = `

Message:
> 1 | @media (color-gamut: rgb) {}
    |                      ^^^ Invalid value \`rgb\` for media feature \`color-gamut\`. Expected srgb | p3 | rec2020.

`;

exports[`invalid(75): @media (nav-controls: forward) {} 1`] = `

  1 | @media (nav-controls: forward) {}

`;

exports[`invalid(75): @media (nav-controls: forward) {} 2`] = `

Message:
> 1 | @media (nav-controls: forward) {}
    |                       ^^^^^^^ Invalid value \`forward\` for media feature \`nav-controls\`. Expected none | back.

`;

exports[`invalid(76): @media (display-state: open) {} 1`] = `

  1 | @media (display-state: open) {}

`;

exports[`invalid(76): @media (display-state: open) {} 2`] = `

Message:
> 1 | @media (display-state: open) {}
    |                        ^^^^ Invalid value \`open\` for media feature \`display-state\`. Expected normal | minimized | maximized | fullscreen.

`;

exports[`invalid(77): @media (horizontal-viewport-segments: 0.5) {} 1`] = `

  1 | @media (horizontal-viewport-segments: 0.5) {}

`;

exports[`invalid(77): @media (horizontal-viewport-segments: 0.5) {} 2`] = `

Message:
> 1 | @media (horizontal-viewport-segments: 0.5) {}
    |                                       ^^^ Invalid value \`0.5\` for media feature \`horizontal-viewport-segments\`. Expected <integer>.

`;

exports[`invalid(78): @media (color-gamut > srgb) {} 1`] = `

  1 | @media (color-gamut > srgb) {}

`;

exports[`invalid(78): @media (color-gamut > srgb) {} 2`] = `

Message:
> 1 | @media (color-gamut > srgb) {}
    |         ^^^^^^^^^^^ Media feature \`color-gamut\` does not support range notation.

`;

exports[`invalid(79): @media (scan > progressive) {} 1`] = `

  1 | @media (scan > progressive) {}

`;

exports[`invalid(79): @media (scan > progressive) {} 2`] = `

Message:
> 1 | @media (scan > progressive) {}
    |         ^^^^ Media feature \`scan\` does not support range notation.

`;

exports[`invalid(8): @media (width: red) {} 1`] = `

  1 | @media (width: red) {}

`;

exports[`invalid(8): @media (width: red) {} 2`] = `

Message:
> 1 | @media (width: red) {}
    |                ^^^ Invalid value \`red\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(80): @media (update >= slow) {} 1`] = `

  1 | @media (update >= slow) {}

`;

exports[`invalid(80): @media (update >= slow) {} 2`] = `

Message:
> 1 | @media (update >= slow) {}
    |         ^^^^^^ Media feature \`update\` does not support range notation.

`;

exports[`invalid(81): @media (pointer <= fine) {} 1`] = `

  1 | @media (pointer <= fine) {}

`;

exports[`invalid(81): @media (pointer <= fine) {} 2`] = `

Message:
> 1 | @media (pointer <= fine) {}
    |         ^^^^^^^ Media feature \`pointer\` does not support range notation.

`;

exports[`invalid(82): @media (max-height <= 20px) {} 1`] = `

  1 | @media (max-height <= 20px) {}

`;

exports[`invalid(82): @media (max-height <= 20px) {} 2`] = `

Message:
> 1 | @media (max-height <= 20px) {}
    |         ^^^^^^^^^^ Media feature \`max-height\` does not support range notation.

`;

exports[`invalid(83): @media (10px < min-device-width) {} 1`] = `

  1 | @media (10px < min-device-width) {}

`;

exports[`invalid(83): @media (10px < min-device-width) {} 2`] = `

Message:
> 1 | @media (10px < min-device-width) {}
    |                ^^^^^^^^^^^^^^^^ Media feature \`min-device-width\` does not support range notation.

`;

exports[`invalid(84): @media (min-resolution) {} 1`] = `

  1 | @media (min-resolution) {}

`;

exports[`invalid(84): @media (min-resolution) {} 2`] = `

Message:
> 1 | @media (min-resolution) {}
    |         ^^^^^^^^^^^^^^ Media feature \`min-resolution\` requires a value in plain notation.

`;

exports[`invalid(85): @media (10px <= width > 20px) {} 1`] = `

  1 | @media (10px <= width > 20px) {}

`;

exports[`invalid(85): @media (10px <= width > 20px) {} 2`] = `

Message:
> 1 | @media (10px <= width > 20px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(86): @media (10px > width < 20px) {} 1`] = `

  1 | @media (10px > width < 20px) {}

`;

exports[`invalid(86): @media (10px > width < 20px) {} 2`] = `

Message:
> 1 | @media (10px > width < 20px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(87): @media (20px > width > red) {} 1`] = `

  1 | @media (20px > width > red) {}

`;

exports[`invalid(87): @media (20px > width > red) {} 2`] = `

Message:
> 1 | @media (20px > width > red) {}
    |                        ^^^ Invalid value \`red\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(88): @media (10px < width < 20px) and (20px < height > 10px) {} 1`] = `

  1 | @media (10px < width < 20px) and (20px < height > 10px) {}

`;

exports[`invalid(88): @media (10px < width < 20px) and (20px < height > 10px) {} 2`] = `

Message:
> 1 | @media (10px < width < 20px) and (20px < height > 10px) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^ Chained media feature comparisons must place the feature between two values and use the same comparison direction.

`;

exports[`invalid(89): @media screen { .element { @media (min-width) { color: red; } } } 1`] = `

  1 | @media screen { .element { @media (min-width) { color: red; } } }

`;

exports[`invalid(89): @media screen { .element { @media (min-width) { color: red; } } } 2`] = `

Message:
> 1 | @media screen { .element { @media (min-width) { color: red; } } }
    |                                    ^^^^^^^^^ Media feature \`min-width\` requires a value in plain notation.

`;

exports[`invalid(9): @media (width: 10pixels) {} 1`] = `

  1 | @media (width: 10pixels) {}

`;

exports[`invalid(9): @media (width: 10pixels) {} 2`] = `

Message:
> 1 | @media (width: 10pixels) {}
    |                ^^^^^^^^ Invalid value \`10pixels\` for media feature \`width\`. Expected <length>.

`;

exports[`invalid(90): @import \"theme.css\" (width: red); 1`] = `

  1 | @import "theme.css" (width: red);

`;

exports[`invalid(90): @import \"theme.css\" (width: red); 2`] = `

Message:
> 1 | @import "theme.css" (width: red);
    |                             ^^^ Invalid value \`red\` for media feature \`width\`. Expected <length>.

`;
